--- a/index.html
+++ b/index.html
@@ -1,95 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-
-    <link rel="icon" href="devchallenges.png" />
-
     <link
       rel="shortcut icon"
+      href="assets/devchallenges.png"
       type="image/x-icon"
-      href="https://devchallenges.io/"
     />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-
-    <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <title>Checkout page</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
-      </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+    <header>
+      <h1>Checkout</h1>
+    </header>
+    <main>
+      <section class="section1">
+        <form id="form">
+          <h2>Contact infomation</h2>
+          <div class="input">
+            <label for="miInput" class="input-label">Email</label>
+            <div class="input-with-icon">
+              <i class="fas fa-envelope"></i>
+              <input
+                required
+                type="email"
+                id="email"
+                placeholder="Enter your email..."
+              />
+            </div>
+          </div>
+          <div class="input">
+            <label for="miInput" class="input-label">Phone</label>
+            <div class="input-with-icon">
+              <i class="fa-solid fa-phone"></i>
+              <input type="text" id="phone" placeholder="Enter your phone..." />
+            </div>
+          </div>
+          <h2 class="h2-tittle">Shipping address</h2>
+          <div class="input">
+            <label for="miInput" class="input-label">Full name</label>
+            <div class="input-with-icon">
+              <i class="fa-solid fa-circle-user"></i>
+              <input type="text" id="name" placeholder="Enter your name..." />
+            </div>
+          </div>
+          <div class="input">
+            <label for="miInput" class="input-label">Address</label>
+            <div class="input-with-icon">
+              <i class="fa-solid fa-house"></i>
+              <input type="text" id="address" placeholder="Your address.." />
+            </div>
+          </div>
+          <div class="input">
+            <label for="miInput" class="input-label">City</label>
+            <div class="input-with-icon">
+              <i class="fa-solid fa-city"></i>
+              <input type="text" id="city" placeholder="Your city.." />
+            </div>
+          </div>
+          <div class="CityAndPostalInputs">
+            <div class="input">
+              <label for="miSelect" class="input-label">Country</label>
+              <div class="input-with-icon">
+                <i class="fa-solid fa-earth-americas"></i>
+                <select id="country">
+                  <option value="" disabled selected hidden>
+                    Your country..
+                  </option>
+                  <option value="Colombia">Colombia</option>
+                  <option value="Argentina">Argentina</option>
+                  <option value="Chile">Chile</option>
+                </select>
+              </div>
+            </div>
+            <div class="input">
+              <label for="miInput" class="input-label">Postal code</label>
+              <div class="input-with-icon">
+                <i class="fa-solid fa-truck-fast"></i>
+                <input type="text" id="postalCode" placeholder="Your city.." />
+              </div>
+            </div>
+          </div>
+          <div class="saveInformation">
+            <input type="checkbox" id="chk" />
+            <span>Save this information for next time</span>
+          </div>
+          <button class="btnSubmit" onclick="ValidarFormulario()" type="button">
+            Continue
+          </button>
+        </form>
+      </section>
+      <section class="section2">
+        <div class="items">
+          <div class="item">
+            <img src="assets/photo1.png" alt="item" />
+            <div class="item-details">
+              <span class="item-name">Vintage Backbag</span>
+              <div class="item-value">
+                <spa class="item-price">$54.99</spa>
+                <spa class="item-discount">$94.99</spa>
+              </div>
+              <div class="number">
+                <button onclick="itemLess(1)" class="item-less">-</button>
+                <span id="item1" class="item-count"></span>
+                <button onclick="itemPlus(1)" class="item-plus">+</button>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="assets/photo2.png" alt="item" />
+            <div class="item-details">
+              <span class="item-name">Levi Shoes</span>
+              <div class="item-value">
+                <spa class="item-price">$74.99</spa>
+                <spa class="item-discount">$124.99</spa>
+              </div>
+              <div class="number">
+                <button onclick="itemLess(2)" class="item-less">-</button>
+                <span id="item2" class="item-count"></span>
+                <button onclick="itemPlus(2)" class="item-plus">+</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="summary">
+          <div class="separador"></div>
+          <div class="item-total">
+            <span class="shipping">Shipping</span>
+            <span class="total">$19</span>
+          </div>
+          <div class="separador"></div>
+          <div class="item-total">
+            <span class="shipping">Total</span>
+            <span id="total" class="total"></span>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <span
+        ><a target="_blank" href="https://github.com/plaka001"
+          >created by Plaka001 - devChallenges.io</a
+        ></span
+      >
+    </footer>
+    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
