--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
               <label for="miInput" class="input-label">Postal code</label>
               <div class="input-with-icon">
                 <i class="fa-solid fa-truck-fast"></i>
-                <input type="text" id="postalCode" placeholder="Your city.." />
+                <input
+                  type="text"
+                  id="postalCode"
+                  placeholder="Your postalCode"
+                />
               </div>
             </div>
           </div>
